feat: add logout function
