# backend/internal/cmd/api/router.go
@@ -25,10 +25,14 @@ func NewRouter(validator *OpenAPIValidator, handlers *Handlers) http.Handler {
 	router.Post("/auth/signin-with-google", handlers.AuthHandler.SignInWithGoogle)
 
 	// add private routes
-	router.Group(func(r httproute.Router) {
-		r.Use(handlers.AuthHandler.Authenticator())
+	router.Group(func(grt httproute.Router) {
+		grt.Use(handlers.AuthHandler.Authenticator())
 
-		r.Route("/v1/users", func(r httproute.Router) {
+		grt.Route("/auth/logout", func(r httproute.Router) {
+			r.Post("/", handlers.AuthHandler.Logout)
+		})
+
+		grt.Route("/v1/users", func(r httproute.Router) {
 			r.Get("/", handlers.UserHandler.List)
 		})
 	})
